# zed-qcc

./: .gitignore  .project_config  AGENTS.md  BE-CAREFUL.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  extension.toml
.agents/skills/basilisk-qcc-release/: SKILL.md
.agents/skills/basilisk-qcc-release/agents/: openai.yaml
.agents/skills/basilisk-qcc-release/scripts/: release-zed-extension.sh
.agents/skills/zed-qcc-release/: SKILL.md
.agents/skills/zed-qcc-release/agents/: openai.yaml
.agents/skills/zed-qcc-release/scripts/: release-zed-extension.sh
.github/workflows/: ci.yml  release.yml
basilisk/src/: bview2D  bview2Dm  bview3D  qcc
basilisk/src/ast/: grammar
basilisk/src/ast/grammar.dSYM/Contents/Resources/DWARF/: grammar
basilisk/src/bview2D.dSYM/Contents/Resources/DWARF/: bview2D
basilisk/src/bview2Dm.dSYM/Contents/Resources/DWARF/: bview2Dm
basilisk/src/bview3D.dSYM/Contents/Resources/DWARF/: bview3D
basilisk/src/darcsit/: codeblock  literate-c  pagemagic  sanitize  urldecode
basilisk/src/kdt/: kdtquery  xyz2kdt
basilisk/src/qcc 3.dSYM/Contents/Resources/DWARF/: qcc
languages/basilisk/: brackets.scm  config.toml  folds.scm  highlights.scm  injections.scm  outline.scm  textobjects.scm
lsp/: UPSTREAM.txt  basiliskDetect.js  basiliskDocs.js  basiliskLanguage.js  clangdClient.js  clangdConfig.js  cli.js  diagnostics.js  pathUtils.js  projectConfig.js  server.js  symbols.js
scripts/: launch-clangd.sh  qcc-build.sh  refresh-compile-commands.sh  sync-qcc-lsp-server.sh
src/: lib.rs
(+7 files in other folders)
