[package]
name = "zed-basilisk"
version = "0.1.0"
edition = "2021"
authors = ["Zed Basilisk Contributors"]
description = "Basilisk C language support for Zed"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.5"
